claim_salary_fr: do not use revaluation in salary default rules (#2520)
Fix #10749

--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -315,6 +315,14 @@ msgctxt "error:event.type.action:"
 msgid "Create Non Periodic Invoices"
 msgstr "Créer les quittances non périodiques"
 
+msgctxt "error:rule_engine.runtime:"
+msgid ""
+"Invalid configuration: the revaluation rule is called with invalid "
+"parameters"
+msgstr ""
+"Paramétrage incorrect : la règle de revalorisation est appelée avec des "
+"paramètres incorrects"
+
 msgctxt "field:account.invoice.line,claim_detail:"
 msgid "Claim Detail"
 msgstr "Détail du sinistre"
