--- a/modules/claim_salary_fr/doc/fr/CHANGELOG
+++ b/modules/claim_salary_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10749 Rendre les règles de calcul de salaire par défaut compatibles avec le fait que la prestation liée ait une revalorisation basée sur le traitement de base
 * FEA#10556 Ajout d'un menu dans enregistrements liés afin de visualiser les salaires sur un sinistre
 * FEA#10532 Ajout d'un champ sur le service délivré pour écraser le mode de salaire par service délivré
 * BUG#10396 Rajout du champ net_salary_bonus
