--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10919 Raise a warning rather than an error when trying to post a dsn invoice without the dsn configuration done
 * OTH#00000 Fix super call following #10638
 * BUG#10694 CRM file can contain duplicate blocks
 * BUG#10698 Only rely on indemnification data to identify parties to declare, and not on invoice data
