--- a/modules/offered_insurance/doc/fr/CHANGELOG
+++ b/modules/offered_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10695 Vérifier si une garantie est déja souscrite par le souscripteur du contrat
 * BUG#10779 Correction du domaine sur les données complémentaires
 * OTH#0000 Remplacement de données "champs_technique" du moteur de règle par des vrais données métier
 
