--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10899 Add new action on payment rejects: Present again after period
 * BUG#10186 Fix the state of the field sepa bank reject date in order to make it visible
 
 Version 2.2 - 2018-10-12
