claim_life: Check covered period dates in get_theoretical_covered_element (#2551)
Fix #10908

--- a/modules/claim_life/locale/fr.po
+++ b/modules/claim_life/locale/fr.po
@@ -61,6 +61,14 @@ msgid "The previous std doesn't have an end date defined"
 msgstr ""
 "La date de fin d'arrêt de travail du précédent arrêt n'est pas définie"
 
+msgctxt "error:claim.service:"
+msgid ""
+"More than one covered element have "
+"been found for the claim service %(id)s: %(rec_name)s."
+msgstr ""
+"Plus d'un élément couvert ont été "
+"trouvés pour le service %(id)s : %(rec_name)s."
+
 msgctxt "error:party.erase:"
 msgid ""
 "The party %(party)s can not be erased because it is covered on the following open claims: \n"
