claim_group_life_fr: Fix various accents in default XML configuration (#2560)
Fix #00000

--- a/modules/claim_group_life_fr/locale/fr.po
+++ b/modules/claim_group_life_fr/locale/fr.po
@@ -213,11 +213,11 @@ msgctxt ""
 msgid ""
 "ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
 "min_ijb_2_tdrj_mtt:Minimum de (Prestation base / 2) et (100% traitement de référence - IJSS - mi-temps) \n"
-"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+"tdrj_ijss_mtt: 100% Traitement de référence - IJSS - mi-temps"
 msgstr ""
 "ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
 "min_ijb_2_tdrj_mtt:Minimum de (Prestation base / 2) et (100% traitement de référence - IJSS - mi-temps) \n"
-"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+"tdrj_ijss_mtt: 100% Traitement de référence - IJSS - mi-temps"
 
 msgctxt "model:rule_engine.rule_parameter,selection:None"
 msgid ""
@@ -252,11 +252,11 @@ msgctxt ""
 msgid ""
 "ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
 "min_ijb_2_tdrj_mtt:Minimum de (Prestation de base / 2) et(100% traitement de référence - IJSS - mi-temps) \n"
-"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+"tdrj_ijss_mtt: 100% Traitement de référence - IJSS - mi-temps"
 msgstr ""
 "ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
 "min_ijb_2_tdrj_mtt:Minimum de (Prestation de base / 2) et(100% traitement de référence - IJSS - mi-temps) \n"
-"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+"tdrj_ijss_mtt: 100% Traitement de référence - IJSS - mi-temps"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,selection:inclusion_du_mi_temps_therapeutique_regle_de_calcul_des_deductions_des_montants_percus"
