--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -1536,7 +1536,7 @@ msgid ""
 "indemnification period on a delivered service for this benefit"
 msgstr ""
 "Les journaux de paiement définis ici seront utilisables lors de la création "
-"d'une période d'indémnisation sur un service délivré pour la prestation"
+"d'une période d'indemnisation sur un service délivré pour la prestation"
 
 msgctxt "help:claim.configuration,sorting_method:"
 msgid "This value will be used to sort indemnifications by start date"
@@ -1556,7 +1556,7 @@ msgid ""
 "This amount is a daily amount if indemnification kind is period, annual if "
 "the kind is annuity, and the capital's amount if the kind is a capital"
 msgstr ""
-"Ce montant est journalier si le type de l'indémnisation est \"Période\", "
+"Ce montant est journalier si le type de l'indemnisation est \"Période\", "
 "annuel si le type est \"Rente\" et le montant du capital dans le cas du type"
 " \"Capital\" "
 
@@ -1569,7 +1569,7 @@ msgid ""
 "This amount is a daily amount if indemnification kind is period, annual if "
 "the kind is annuity, and the capital's amount if the kind is a capital"
 msgstr ""
-"Ce montant est journalier si le type de l'indémnisation est \"Période\", "
+"Ce montant est journalier si le type de l'indemnisation est \"Période\", "
 "annuel si le type est \"Rente\" et le montant du capital dans le cas du type"
 " \"Capital\" "
 
@@ -1595,7 +1595,7 @@ msgid ""
 "This amount is a daily amount if indemnification kind is period, annual if "
 "the kind is annuity, and the capital's amount if the kind is a capital"
 msgstr ""
-"Ce montant est journalier si le type de l'indémnisation est \"Période\", "
+"Ce montant est journalier si le type de l'indemnisation est \"Période\", "
 "annuel si le type est \"Rente\" et le montant du capital dans le cas du type"
 " \"Capital\" "
 
