--- a/modules/claim_indemnification_group/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/fr/CHANGELOG
@@ -20,7 +20,7 @@ Version 2.0 - 2018-04-13
 
 Version 1.14 - 2017-11-09
 * BUG#7434 Ajout d'un nom pour la règle d'indemnisation dans la vue liste
-* BUG#6350 Correction du crash lors de la création d'une période d'indémnisation depuis l'assistant de création
+* BUG#6350 Correction du crash lors de la création d'une période d'indemnisation depuis l'assistant de création
 
 Version 1.12 - 2017-04-28
 
