--- a/modules/loan/doc/fr/CHANGELOG
+++ b/modules/loan/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10836 Correction de la méthode get_share_per_loan sur l'ordre des prêts
+
 Version 2.2 - 2018-10-12
 * BUG#9718 Retirer le code cachant l'affichage des tarifs pour un contrat emprunteur
 * FEA#9342 Ajout d'un paramètre contenant le capital restant dû à la dernière date anniversaire d'un contrat au moteur de règles
