--- a/modules/contract_insurance/locale/fr.po
+++ b/modules/contract_insurance/locale/fr.po
@@ -3,6 +3,14 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:contract.covered_element:"
+msgid "Covered %(covered)s has an option that ends after its end date"
+msgstr "Le risque %(covered)s a une garantie se terminant après sa date de fin"
+
+msgctxt "error:contract.covered_element:"
+msgid "Covered %(covered)s has an option that starts before its start date"
+msgstr "Le risque %(covered)s a une garantie commençant après sa date de début"
+
+msgctxt "error:contract.covered_element:"
 msgid ""
 "You are trying to create duplicate covered elements on contract: "
 " %s"
