--- a/modules/contract/doc/fr/CHANGELOG
+++ b/modules/contract/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10956 Ajout d'un contrôle de chevauchement sur les garanties
 * OTH#00000 Correction de la méthode on_change_with_sub_status: elle doit retrouner l'id au lieu de l'instance
 * BUG#10316 Blocage lors de la souscription d'une garantie ayant une date de fin antérieure à sa date de début
 * BUG#10242 Réinitialiser la date de fin manuelle des options résiliées lors de la résiliation de contrats
