--- a/modules/claim_insurer/doc/en/CHANGELOG
+++ b/modules/claim_insurer/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10966 Fix claim insurer invoice slip generation chain
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * FEA#8056 Module Creation
