--- a/modules/claim_insurer/doc/fr/CHANGELOG
+++ b/modules/claim_insurer/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10966 Correctif de la chaine de génération des bordereaux de prestation assureur
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * FEA#8056 Création du module
