--- a/modules/claim_insurer/locale/fr.po
+++ b/modules/claim_insurer/locale/fr.po
@@ -2,8 +2,8 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:report.template:"
-msgid "Claim Insurer Invoice"
+msgctxt "selection:account.journal,type:"
+msgid "Claim Insurer Slip"
 msgstr "Bordereau assureur de prestation"
 
 msgctxt "field:account.invoice.line,invoice_business_kind:"
