--- a/modules/contract_insurance_health_fr/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_health_fr/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10793 Ajout d'un batch de création de modèles de courriers annuels pour la loi Madelin
+
 Version 2.2 - 2018-10-12
 * BUG#8993 Restauration de l'appel au super sur le write de party
 
