--- a/modules/contract_insurance_health_fr/locale/fr.po
+++ b/modules/contract_insurance_health_fr/locale/fr.po
@@ -32,6 +32,22 @@ msgctxt "error:party.relation:"
 msgid "The SSN is required for %s"
 msgstr "Le numéro NIR est requis pour %s"
 
+msgctxt "field:offered.product,print_madelin_reports:"
+msgid "Print Madelin Reports"
+msgstr "Imprimer les modèles Madelin"
+
+msgctxt "help:offered.product,print_madelin_reports:"
+msgid ""
+"If set, the batch will retrieve associated contracts each "
+"new civil year for the Madelin reports generation"
+msgstr ""
+"Si coché, le batch récuperera les contrats associés à chaque nouvelle "
+"année civile pour la génération des modèles Madelin"
+
+msgctxt "field:offered.product,print_madelin_reports:"
+msgid "Print Madelin Reports"
+msgstr "Imprimer les modèles Madelin"
+
 msgctxt "field:health.care_system,code:"
 msgid "Code"
 msgstr "Code"
