endorsement_option_benefit: Fix annuity frequency display when it is not forced (#2568)
Fix #10965

--- a/modules/endorsement_option_benefit/doc/en/CHANGELOG
+++ b/modules/endorsement_option_benefit/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10965 Fix annuity frequency display when it is not forced
 * BUG#10171 Add parent name in option list
 
 Version 2.2 - 2018-10-12
