--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10975 Remove termination reason when reactivating a hold contract
 * BUG#10956 Add overlap check on coverages
 * OTH#00000 Fix on_change_with_sub_status: must return id instead of object
 * BUG#10316 Block subscription of options with an end date smaller than its start date
