--- a/modules/claim_insurer/doc/en/CHANGELOG
+++ b/modules/claim_insurer/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10435 add method for reporting on claim slip
 * BUG#10966 Fix claim insurer invoice slip generation chain
 
 Version 2.2 - 2018-10-12
