--- a/modules/claim_insurer/doc/fr/CHANGELOG
+++ b/modules/claim_insurer/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10435 ajout d'une méthode pour le reporting sur les bordereaux de prestations
 * BUG#10966 Correctif de la chaine de génération des bordereaux de prestation assureur
 
 Version 2.2 - 2018-10-12
