--- a/modules/party_fr/doc/fr/CHANGELOG
+++ b/modules/party_fr/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11011 Ajout du siren sur la vue des personnes morales
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
