--- a/modules/contract_identifiers/doc/fr/CHANGELOG
+++ b/modules/contract_identifiers/doc/fr/CHANGELOG
@@ -1,5 +1,9 @@
+* FEA#10753: Gestion des identifiants externes du contrat. Les types d'identifiants peuvent être paramétrés.
+
 Version 2.2 - 2018-10-12
+
 Version 2.0 - 2018-04-13
+
 Version 1.14 - 2017-11-09
 * BUG#6654 Impossible de dupliquer un contrat avec un numéro externe
 
