account_payment_sepa_cog: Iteration (handle reject fee date and use day selector (#2557)
Fix #10899

--- a/modules/account_payment_sepa_cog/locale/fr.po
+++ b/modules/account_payment_sepa_cog/locale/fr.po
@@ -117,17 +117,17 @@ msgctxt "field:account.payment.journal,sepa_party:"
 msgid "Sepa Creditor / Debtor"
 msgstr "Créditeur / Débiteur Sepa"
 
-msgctxt "field:account.payment.journal.failure_action,number_of_day:"
-msgid "Number Of Day(s)"
-msgstr "Nombre de jour(s)"
+msgctxt "field:account.payment.journal.failure_action,present_again_day:"
+msgid "Present Again This Day"
+msgstr "Représenter ce jour"
 
 msgctxt "field:account.payment.journal.failure_action,present_again_after:"
-msgid "Present Again After"
-msgstr "Représenter à nouveau après"
+msgid "Present Again At"
+msgstr "Représenter à nouveau à une date"
 
 msgctxt "selection:account.payment.journal.failure_action,action:"
-msgid "Present Again After Period"
-msgstr "Représenter à nouveau après une période"
+msgid "Present Again At Date"
+msgstr "Représenter à nouveau à une date"
 
 msgctxt "field:account.payment.journal.update.sepa,id:"
 msgid "ID"
