--- a/modules/claim_salary_fr/doc/en/CHANGELOG
+++ b/modules/claim_salary_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11007 Do not automatically save services when calling init_salaries
 * BUG#10749 Make default salary rules compatible with benefit having a revaluation on basic salary
 * FEA#10556 Add salaries relate on claim
 * FEA#10532 Add field on delivered service to override the salary mode per delivered service
