process_cog: Add process start date to the process log tree view (#2576)
Fix #11004

--- a/modules/process_cog/doc/fr/CHANGELOG
+++ b/modules/process_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11004 Ajout de la date de début du processus à la vue liste de tâches
 * BUG#10594 Gestion du cas où aucune trace du processus n'existe lorsqu'on relance un processus
 
 Version 2.2 - 2018-10-12
