--- a/modules/process_cog/doc/en/CHANGELOG
+++ b/modules/process_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11004 Add process start date to the process log tree view
 * BUG#10594 Handle case where no process log exists when resuming a process
 
 Version 2.2 - 2018-10-12
