event_log: Add global configuration to aggregate event notifications (#2556)
Fix #10942

--- a/modules/event_log/doc/fr/CHANGELOG
+++ b/modules/event_log/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10942 Ajout de configuration pour concentrer des notifications d'événements dans une période et notifier un autre événement seulement une seule fois
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
