--- a/modules/event_log/doc/en/CHANGELOG
+++ b/modules/event_log/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10942 Add configuration to aggregate event notifications in a given period and notify another event only once
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
