--- a/modules/party_ssn/doc/fr/CHANGELOG
+++ b/modules/party_ssn/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10981 Correction d'une erreur lors de l'anonymisation d'un tiers
 * BUG#10131 Autoriser les numéros SSN qui ne commencent pas par 1 ou 2
 
 Version 2.2 - 2018-10-12
