endorsement: Fix data translate method crash when non-ascii value (#2591)
Fix #11054

--- a/modules/endorsement/doc/en/CHANGELOG
+++ b/modules/endorsement/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11054 Fix translate data method crash
 * BUG#10581 Fix MRO for endorsements
 * BUG#10809 Fix display of endorsement sub elements
 
