--- a/modules/claim_life/locale/fr.po
+++ b/modules/claim_life/locale/fr.po
@@ -64,10 +64,10 @@ msgstr ""
 msgctxt "error:claim.service:"
 msgid ""
 "More than one covered element have "
-"been found for the claim service %(id)s: %(rec_name)s."
+"been found for the claim service at %(date)s for %(rec_name)s."
 msgstr ""
 "Plus d'un élément couvert ont été "
-"trouvés pour le service %(id)s : %(rec_name)s."
+"trouvés pour le service au %(date)s pour %(rec_name)s."
 
 msgctxt "error:party.erase:"
 msgid ""
