account_payment_sepa_contract: add condition on payment kind when forcing sepa payment with no mandate to draft (#2597)
Fix #11068

--- a/modules/account_payment_sepa_contract/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11068 Only force Sepa payment without mandate state to draft when it is receivable
 * BUG#10116 Mettre le statut d'un nouveau paiement à brouillon si aucun mandat n'est trouvé
 
 Version 2.2 - 2018-10-12
