--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10972 Correction d'incohérence de la déclaration Pasrau dûes aux écarts entre arrondi des sommes et somme d'arrondis
 * BUG#10919 Utiliser un message non bloquant plutôt que bloquant lors de l'émission d'une quittance pasrau sans la configuration DSN
 * OTH#00000 Correction d'un call à super suite à #10638
 * BUG#10694 Le fichier CRM peut contenir des blocs en doulons
