--- a/modules/party_cog/locale/fr.po
+++ b/modules/party_cog/locale/fr.po
@@ -2,15 +2,25 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:party.address:"
+msgctxt "error:country.address.line:"
+msgid "Invalid domain in schema \"%(schema)s\"."
+msgstr "Domaine non valide dans le schéma « %(schema)s »."
+
+msgctxt "error:country.address.line:"
 msgid ""
-"\"%(value)s\" into the address line \"%(line)s\" exceeds "
-"the configuration limit of character(s) (%(max)s) for the country "
-"\"%(country)s\""
+"The following keys will be removed from all existing data in the database, this may take some time:\n"
+"%(codes)s"
 msgstr ""
-"\"%(value)s\" dans la ligne d'adresse \"%(line)s\" dépasse "
-"la limite de caractère définie dans la configuration (%(max)s) pour "
-"le pays \"%(country)s\""
+"Toutes les occurences des clefs suivantes seront retirées de la base de donnée, cela peut prendre du temps:"
+"%(codes)s"
+
+msgctxt "error:country.address.line:"
+msgid ""
+"The following keys will be renamed in all existing data in the database, this may take some time:\n"
+"%(codes)s"
+msgstr ""
+"Toutes les occurences des clefs suivantes seront renommées en base de donnée, cela peut prendre du temps:"
+"%(codes)s"
 
 msgctxt "error:country.zip:"
 msgid ""
@@ -35,6 +45,15 @@ msgstr ""
 "%(parties)s\n"
 "\n"
 "Continuer brisera ces liens."
+
+msgctxt "error:party.address:"
+msgid ""
+"\"%(value)s\" into the address line \"%(line)s\" exceeds the configuration "
+"limit of character(s) (%(max)s) for the country \"%(country)s\""
+msgstr ""
+"\"%(value)s\" dans la ligne d'adresse \"%(line)s\" dépasse la limite de "
+"caractère définie dans la configuration (%(max)s) pour le pays "
+"\"%(country)s\""
 
 msgctxt "error:party.contact_mechanism:"
 msgid "Invalid Email !"
@@ -67,10 +86,6 @@ msgctxt "field:country.address.line,country:"
 msgid "Country"
 msgstr "Pays"
 
-msgctxt "field:country.address.line,max_length:"
-msgid "Max Length"
-msgstr "Longeur maximum"
-
 msgctxt "field:country.address.line,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -87,9 +102,17 @@ msgctxt "field:country.address.line,digits:"
 msgid "Digits"
 msgstr "Précision"
 
+msgctxt "field:country.address.line,domain:"
+msgid "Domain"
+msgstr "Domaine"
+
 msgctxt "field:country.address.line,id:"
 msgid "ID"
 msgstr "Identifiant"
+
+msgctxt "field:country.address.line,max_length:"
+msgid "Max Length"
+msgstr "Longeur maximum"
 
 msgctxt "field:country.address.line,name:"
 msgid "Code"
@@ -97,7 +120,7 @@ msgstr "Code"
 
 msgctxt "field:country.address.line,rec_name:"
 msgid "Record Name"
-msgstr "Nom"
+msgstr "Nom de l'enregistrement"
 
 msgctxt "field:country.address.line,selection:"
 msgid "Selection"
@@ -222,6 +245,10 @@ msgstr "Identifiant XML"
 msgctxt "field:party.address,zip_and_city:"
 msgid "Zip"
 msgstr "Code Postal"
+
+msgctxt "field:party.anonymize.process,id:"
+msgid "ID"
+msgstr "Identifiant"
 
 msgctxt "field:party.category,xml_id:"
 msgid "XML Id"
@@ -470,6 +497,10 @@ msgstr "Genre long"
 msgctxt "field:party.party,main_address:"
 msgid "Main Address"
 msgstr "Adresse"
+
+msgctxt "field:party.party,planned_anonymization_date:"
+msgid "Planned Anonymization Date"
+msgstr "Date d'anonymisation planifiée"
 
 msgctxt "field:party.party,summary:"
 msgid "Summary"
@@ -859,17 +890,17 @@ msgctxt "field:res.user,party_synthesis_previous:"
 msgid "Previous Synthesis Parties"
 msgstr "Synthèses acteur précédentes"
 
+msgctxt "help:country.address.line,max_length:"
+msgid ""
+"When validating the address, the corresponding address line length will be "
+"checked not to exceed this limit"
+msgstr ""
+"Lors de la validation des adresses, la taille lignes d'adresse sera vérifiée"
+" afin de ne pas dépasser cette limite"
+
 msgctxt "help:country.address.line,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparé par un \\\":\\\" par ligne"
-
-msgctxt "help:country.address.line,max_length:"
-msgid ""
-"When validating the address, the corresponding address line "
-"length will be checked not to exceed this limit"
-msgstr ""
-"Lors de la validation des adresses, la taille lignes d'adresse "
-"sera vérifiée afin de ne pas dépasser cette limite"
 
 msgctxt "help:country.address.line,selection_sorted:"
 msgid "If the selection must be sorted on label"
@@ -1019,6 +1050,10 @@ msgctxt "model:ir.ui.menu,name:menu_zipcode_form"
 msgid "Zip"
 msgstr "Code Postal"
 
+msgctxt "model:party.anonymize.process,name:"
+msgid "Anonymize Parties batch"
+msgstr "Batch d'anonymisation de tiers"
+
 msgctxt "model:party.extract.gdpr_data_view,name:"
 msgid "Extract GDPR Data View"
 msgstr "Vue extraction des données RGPD"
@@ -1164,10 +1199,6 @@ msgid "Mister"
 msgstr "Monsieur"
 
 msgctxt "view:party.address:"
-msgid "Addresses"
-msgstr "Adresses"
-
-msgctxt "view:party.address:"
 msgid "Zip:"
 msgstr "Code Postal :"
 
@@ -1194,6 +1225,10 @@ msgstr "Contact"
 msgctxt "view:party.party:"
 msgid "Extract GDPR Data"
 msgstr "Extraction des données RGPD"
+
+msgctxt "view:party.party:"
+msgid "GDPR"
+msgstr "RGPD"
 
 msgctxt "view:party.party:"
 msgid "Roles"
