account_dunning_cog: fix inactive_dunning that are copied with moved lines (#2604)
Fix #11093

--- a/modules/account_dunning_cog/doc/en/CHANGELOG
+++ b/modules/account_dunning_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11093 inactive_dunning are copied with moved lines
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 * BUG#7674 Do not treat an already treated dunning
