--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correctifs sur l'import export JSON (Python 3)
 * OTH#00000 Conversion des _constraints en validate
 * BUG#10577 Correctif sur le modèle "Utilisateur" afin de le rendre exportable en JSON 
 * OTH#0000 Optimisation de l'utilisation mémoire des méthodes "stream"
