--- a/modules/endorsement_premium/doc/en/CHANGELOG
+++ b/modules/endorsement_premium/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11052 Only display premiums which will be valid after endorsement application in premium endorsment preview
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
