--- a/modules/endorsement_premium/doc/fr/CHANGELOG
+++ b/modules/endorsement_premium/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11052 Afficher uniquement les primes valides après application de l'avenant dans la prévisualisation de l'avenant de changement de primes
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
